@@ -280,6 +280,7 @@ LUA
 • Experimental `vim.pos` and `vim.range` for Position/Range abstraction.
 • |vim.json.encode()| has an `indent` option for pretty-formatting.
 • |vim.json.encode()| has an `sort_keys` option.
+• |Range:is_empty()| to check if a |vim.Range| is empty.
 
 OPTIONS
 
